--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.example</groupId>
   <artifactId>com.testproject</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1</version>
   <name>My test project</name>
 
   <properties>
@@ -11,7 +11,7 @@
     <maven.compiler.target>17</maven.compiler.target>
     <java.version>1.17</java.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <start-class>org.example.Main</start-class>
+    <start-class>com.testproject.AppStarter</start-class>
   </properties>
 
   <parent>
