--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 server.port=1010
 
-#Inmemory database with persistence for testing
+#H2 database with persistence for testing
 spring.datasource.url=jdbc:h2:file:./newspaper;DB_CLOSE_DELAY=-1;
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=test
 spring.datasource.password=test
 
 #Postgres docker database
-#spring.datasource.url=jdbc:postgresql://host.docker.internal:5432/newspaper
+#spring.datasource.url=jdbc:postgresql://postgres:5432/postgres
 #spring.datasource.driverClassName=org.postgresql.Driver
 #spring.datasource.username=postgres
 #spring.datasource.password=postgres
